--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,7 +1,8 @@
-cindent (2.0.20101103) unstable; urgency=low
+cindent (2.0.20101105) unstable; urgency=low
 
   * format lex/yacc files
   * improve messages for unterminated indent-off comment
+  * varied bug-fixes/improvements
 
  -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 25 Oct 2010 18:55:21 -0400
 
