--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20131207) unstable; urgency=low
+
+  * maintenance release, e.g., configure-script
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 07 Dec 2013 07:23:55 -0500
+
 cindent (2.0.20130710) unstable; urgency=low
 
   * Add keywords to ncurses profile
