--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20141113) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 13 Nov 2014 06:09:03 -0500
+
 cindent (2.0.20140417) unstable; urgency=low
 
   * maintenance updates
