--- a/indent.1
+++ b/indent.1
@@ -15,25 +15,32 @@
 .SH Summary
 indent - indent.info
 .PP
-This is indent.info, produced by makeinfo version 4.13 from
-\./indent.texinfo.
-Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
-Foundation, Inc.
-Copyright (C) 1995, 1996 Joseph Arceneaux
-Copyright (C) 1999\-2002, 2010 Thomas E. Dickey
-.PP
-This is Edition 2.0, January, 1996, of \fBThe indent Manual\fP, for
-Indent Version 2.0
-.PP
-Permission is granted to make and distribute verbatim copies of this
-manual provided the copyright notice and this permission notice are
-preserved on all copies.
+.\" This is indent.info, produced by makeinfo version 4.13 from
+.\" \./indent.texinfo.
+.\" 
+.\" INFO\-DIR\-SECTION Indent Code Formatter
+.\" START\-INFO\-DIR\-ENTRY
+.\" * CIndent: (cindent).           C code formatter (fork).
+.\" END\-INFO\-DIR\-ENTRY
+.\" 
+.\"    Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
+.\" Foundation, Inc.
+.\" Copyright (C) 1995, 1996 Joseph Arceneaux
+.\" Copyright (C) 1999\-2010, 2016 Thomas E. Dickey
+.\" 
+.\"    This is Edition 2.0, May, 2016, of \fBThe indent Manual\fP, for Indent
+.\" Version 2.0
+.\" 
+.\"    Permission is granted to make and distribute verbatim copies of this
+.\" manual provided the copyright notice and this permission notice are
+.\" preserved on all copies.
+.\" 
 .SH \fBindent\fR:  Indent and Format C Program Source
 The \fBindent\fR program changes the appearance of a C program by inserting
 or deleting whitespace.
 .PP
-This is Edition 2.0, January 1996, of \fBThe indent Manual\fP, for
-Indent Version 2.0
+This is Edition 2.0, May 2016, of \fBThe indent Manual\fP, for Indent
+Version 2.0
 .TS
 l l
 l l .
