--- a/indent.texinfo
+++ b/indent.texinfo
@@ -18,13 +18,18 @@
 @synindex cp ky
 @setchapternewpage odd
 
+@dircategory Indent Code Formatter
+@direntry
+* CIndent: (cindent).           C code formatter (fork).
+@end direntry
+
 @ifinfo
 Copyright @copyright{} 1989, 1992, 1993, 1994, 1995, 1996 Free Software Foundation, Inc.@*
 Copyright @copyright{} 1995, 1996 Joseph Arceneaux@*
-Copyright @copyright{} 1999-2002, 2010 Thomas E. Dickey
+Copyright @copyright{} 1999-2010, 2016 Thomas E. Dickey
 
 @c !!set edition, date, version
-This is Edition 2.0, January, 1996, of @cite{The @code{indent} Manual},
+This is Edition 2.0, May, 2016, of @cite{The @code{indent} Manual},
 for Indent Version 2.0
 
 Permission is granted to make and distribute verbatim copies of
@@ -61,7 +66,7 @@ original English.
 Copyright @copyright{} 1989, 1992, 1993, 1994, 1995, 1996 Free Software
 Foundation, Inc.
 
-Copyright @copyright{} 1999-2002, 2010 Thomas E. Dickey
+Copyright @copyright{} 1999-2010, 2016 Thomas E. Dickey
 Copyright @copyright{} 1995, 1996 Joseph Arceneaux
 
 Permission is granted to make and distribute verbatim copies of
@@ -93,7 +98,7 @@ The @code{indent} program changes the appearance of a C program by
 inserting or deleting whitespace.
 
 @comment !!set edition, version, date
-This is Edition 2.0, January 1996, of @cite{The @code{indent} Manual},
+This is Edition 2.0, May 2016, of @cite{The @code{indent} Manual},
 for Indent Version 2.0
 @end ifinfo
 
