--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20160515) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 15 May 2016 15:02:31 -0400
+
 cindent (2.0.20141113) unstable; urgency=low
 
   * maintenance updates
