--- a/package/debian/changelog
+++ b/package/debian/changelog
@@ -1,3 +1,9 @@
+cindent (2.0.20190518) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sat, 18 May 2019 07:03:48 -0400
+
 cindent (2.0.20181226) unstable; urgency=low
 
   * maintenance updates
