--- a/tdindent.1
+++ b/tdindent.1
@@ -1,5 +1,5 @@
-.\" $Id: tdindent.1,v 1.8 2018/12/26 20:45:33 tom Exp $
-.\" Copyright:  2010 by Thomas E. Dickey
+.\" $Id: tdindent.1,v 1.9 2019/07/07 21:35:27 tom Exp $
+.\" Copyright:  2010-2018,2019 by Thomas E. Dickey
 .\"
 .\" Permission is hereby granted, free of charge, to any person obtaining a
 .\" copy of this software and associated documentation files (the
@@ -151,7 +151,7 @@ This is configuration-specific.
 The line numbering presented by GNU indent is generally incorrect.
 Use \*n, at
 .RS
-https://invisible-island.net/gnu-patches/
+https://invisible-island.net/cindent/
 .RE
 .PP
 While GNU indent does not support the \fB\-\-profile\fP option,
