--- a/indent.1
+++ b/indent.1
@@ -17,31 +17,31 @@
 .SH NAME
 indent - indent.info
 .PP
-.\" This is indent.info, produced by makeinfo version 4.13 from
-.\" \./indent.texinfo.
+.\" This is indent.info, produced by makeinfo version 6.3 from
+.\" indent.texinfo.
 .\" 
 .\" INFO\-DIR\-SECTION Indent Code Formatter
 .\" START\-INFO\-DIR\-ENTRY
 .\" * CIndent: (cindent).           C code formatter (fork).
 .\" END\-INFO\-DIR\-ENTRY
 .\" 
-.\"    Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
+.\" Copyright (C) 1989, 1992, 1993, 1994, 1995, 1996 Free Software
 .\" Foundation, Inc.
 .\" Copyright (C) 1995, 1996 Joseph Arceneaux
-.\" Copyright (C) 1999\-2010, 2016 Thomas E. Dickey
+.\" Copyright (C) 1999\-2018, 2019 Thomas E. Dickey
 .\" 
-.\"    This is Edition 2.0, May, 2016, of \fBThe indent Manual\fP, for Indent
+.\"    This is Edition 2.0, July, 2019, of \fBThe \fRindent\fB Manual\fR, for Indent
 .\" Version 2.0
 .\" 
 .\"    Permission is granted to make and distribute verbatim copies of this
 .\" manual provided the copyright notice and this permission notice are
 .\" preserved on all copies.
 .\" 
-.SH \fBindent\fR:  Indent and Format C Program Source
+.SH \fBindent\fR: Indent and Format C Program Source
 The \fBindent\fR program changes the appearance of a C program by inserting
 or deleting whitespace.
 .PP
-This is Edition 2.0, May 2016, of \fBThe indent Manual\fP, for Indent
+This is Edition 2.0, May 2016, of \fBThe \fRindent\fB Manual\fR, for Indent
 Version 2.0
 .TS
 l l
@@ -55,8 +55,9 @@ Index	see \fBIndex\fR
 The \fBindent\fR program can be used to make code easier to read
 It can
 also convert from one style of writing C to another.
-\fBindent\fR understands a substantial amount about the syntax of C, but it
-also attempts to cope with incomplete and misformed syntax.
+.PP
+\fBindent\fR understands a substantial amount about the syntax of C, but
+it also attempts to cope with incomplete and misformed syntax.
 .PP
 In version 1.2 and more recent versions, the GNU style of indenting
 is the default.
@@ -122,7 +123,7 @@ cat slithy_toves.c | indent \-o slithy_toves.out
 Most other options to \fBindent\fR control how programs are formatted.
 As of version 1.2, \fBindent\fR also recognizes a long name for each option
 name
-Long options are prefixed by either \fB\-\-\fR or \fB+\fR.(*) In most of
+Long options are prefixed by either \fB\-\-\fR or \fB+\fR.(*)  In most of
 this document, the traditional, short names are used for the sake of
 brevity
 (see \fBOption Summary\fR), for a list of options, including both
@@ -154,11 +155,11 @@ found
 Otherwise, \fBindent\fR will search your home directory for
 \fB.indent.pro\fR and use that file if it is found
 This behaviour is
-different from that of other versions of \fBindent\fR, which load both
-files if they both exist.
+different from that of other versions of \fBindent\fR, which load both files
+if they both exist.
 .PP
-The format of \fB.indent.pro\fR is simply a list of options, just as
-they would appear on the command line, separated by white space (tabs,
+The format of \fB.indent.pro\fR is simply a list of options, just as they
+would appear on the command line, separated by white space (tabs,
 spaces, and newlines)
 Options in \fB.indent.pro\fR may be surrounded by C
 or C++ comments, in which case they are ignored.
@@ -184,8 +185,8 @@ overrides this, as well.
 .PP
 \-\-\-\-\-\-\-\-\-\- Footnotes \-\-\-\-\-\-\-\-\-\-
 .PP
-(*)  \fB+\fR is being superseded by \fB\-\-\fR to maintain consistency with
-the POSIX standard.
+(*) \fB+\fR is being superseded by \fB\-\-\fR to maintain consistency with the
+POSIX standard.
 .SH Backup Files
 As of version 1.3, GNU \fBindent\fR makes GNU\-style backup files, the same
 way GNU Emacs does
@@ -217,19 +218,19 @@ If its value is the string
 \fBnumbered\fR, then numbered backups will be made
 If its value is
 \fBnumbered\-existing\fR, then numbered backups will be made if there
-*already exist* numbered backups for the file being indented;
-otherwise, a simple backup is made
-If \fBVERSION_CONTROL\fR is not set,
-then \fBindent\fR assumes the behaviour of \fBnumbered\-existing\fR.
+*already exist* numbered backups for the file being indented; otherwise,
+a simple backup is made
+If \fBVERSION_CONTROL\fR is not set, then \fBindent\fR
+assumes the behaviour of \fBnumbered\-existing\fR.
 .PP
 Other versions of \fBindent\fR use the suffix \fB.BAK\fR in naming backup
 files
-This behaviour can be emulated by setting
-\fBSIMPLE_BACKUP_SUFFIX\fR to \fB.BAK\fR.
+This behaviour can be emulated by setting \fBSIMPLE_BACKUP_SUFFIX\fR
+to \fB.BAK\fR.
 .PP
-Note also that other versions of \fBindent\fR make backups in the
-current directory, rather than in the directory of the source file as
-GNU \fBindent\fR now does.
+Note also that other versions of \fBindent\fR make backups in the current
+directory, rather than in the directory of the source file as GNU
+\fBindent\fR now does.
 .SH Common styles
 There are several common styles of C code, including the GNU style, the
 Kernighan & Ritchie style, and the original Berkeley style
@@ -241,9 +242,10 @@ always override options implied by a background option.
 .PP
 As of version 1.2, the default style of GNU \fBindent\fR is the GNU
 style
-Thus, it is no longer neccessary to specify the option \fB\-gnu\fR
-to obtain this format, although doing so will not cause an error.
-Option settings which correspond to the GNU style are:
+Thus, it is no longer neccessary to specify the option \fB\-gnu\fR to
+obtain this format, although doing so will not cause an error
+Option
+settings which correspond to the GNU style are:
 .NS
 \-nbad \-bap \-nbc \-bl \-ncdb \-cs \-nce \-di2 \-ndj
 \-ei \-nfc1 \-i2 \-ip5 \-lp \-pcs \-npsl \-psl \-nsc \-nsob \-bli2
@@ -256,15 +258,14 @@ style that the GNU Emacs C mode encourages and which is used in the C
 portions of GNU Emacs
 (People interested in writing programs for
 Project GNU should get a copy of \fBThe GNU Coding Standards\fR, which also
-covers semantic and portability issues such as memory usage, the size
-of integers, etc.)
+covers semantic and portability issues such as memory usage, the size of
+integers, etc.)
 .PP
 The Kernighan & Ritchie style is used throughout their well\-known
 book \fBThe C Programming Language\fR
-It is enabled with the \fB\-kr\fR
-option
-The Kernighan & Ritchie style corresponds to the following set
-of options:
+It is enabled with the \fB\-kr\fR option.
+The Kernighan & Ritchie style corresponds to the following set of
+options:
 .NS
 \-nbad \-bap \-nbc \-br \-c33 \-cd33 \-ncdb \-ce \-ci4
 \-cli0 \-cp33 \-d0 \-di1 \-nfc1 \-nfca \-i4 \-ip0 \-l75 \-lp
@@ -319,8 +320,7 @@ Menu:
 \-bap	see \fBMore on the \fB\-bap\fR option.\fR
 .TE
 .SS \-\-blank\-lines\-after\-declarations
-The \fB\-bad\fR option forces a blank line after every block of
-declarations
+The \fB\-bad\fR option forces a blank line after every block of declarations.
 The \fB\-nbad\fR option does not add any such blank lines.
 .PP
 For example, given the input
@@ -352,7 +352,6 @@ int baz;
 .NE
 .PP
 .SS \-\-blank\-lines\-after\-procedures
-.PP
 The \fB\-bap\fR option forces a blank line after every procedure body.
 .PP
 For example, given the input
@@ -425,13 +424,13 @@ In particular,
 comments beginning a line found within a procedure will be indented to
 the column at which code is currently indented
 The exception to this a
-comment beginning in the leftmost column;  such a comment is output at
+comment beginning in the leftmost column; such a comment is output at
 that column.
 .PP
 \fBindent\fR attempts to leave "boxed comments" unmodified
 The general
-idea of such a comment is that it is enclosed in a rectangle or "box"
-of stars or dashes to visually set it apart
+idea of such a comment is that it is enclosed in a rectangle or "box" of
+stars or dashes to visually set it apart
 More precisely, boxed
 comments are defined as those in which the initial \fB/*\fR is followed
 immediately by the character \fB*\fR, \fB=\fR, \fB_\fR, or \fB\-\fR, or those in which
@@ -493,9 +492,9 @@ option, which specifies an amount by which such comments are moved to
 the *left*, or unindented
 For example, \fB\-d2\fR places comments two
 spaces to the left of code
-By default, comments are aligned with
-code, unless they begin in the first column, in which case they are left
-there by default \- to get them aligned with the code, specify \fB\-fc1\fR.
+By default, comments are aligned with code,
+unless they begin in the first column, in which case they are left there
+by default \- to get them aligned with the code, specify \fB\-fc1\fR.
 .PP
 Comments to the right of code will appear by default in column 33.
 This may be changed with one of three options
@@ -506,10 +505,10 @@ comments following preprocessor directives \fB#else\fR and \fB#endif\fR.
 .PP
 If the code to the left of the comment exceeds the beginning column,
 the comment column will be extended to the next tabstop column past the
-end of the code, or in the case of preprocessor directives, to one
-space past the end of the directive
-This extension lasts only for the
-output of that particular comment.
+end of the code, or in the case of preprocessor directives, to one space
+past the end of the directive
+This extension lasts only for the output
+of that particular comment.
 .PP
 The \fB\-cdb\fR option places the comment delimiters on blank lines.
 Thus, a single line comment like \fB/* Claustrophobia */\fR can be
@@ -557,8 +556,8 @@ struct Sname {
 } Vname;
 .NE
 .PP
-The default behaviour, also obtained by specifying \fB\-bl\fR, would
-yield the following format for the same declaration:
+The default behaviour, also obtained by specifying \fB\-bl\fR, would yield
+the following format for the same declaration:
 .NS
 struct Sname
   {
@@ -586,8 +585,8 @@ If you are using the \fB\-br\fR option, you probably want to also use the
 \fB\-ce\fR option
 This causes the \fBelse\fR in an if\-then\-else construct to
 cuddle up to the immediately preceding \fB}\fR
-For example, with `\-br
-\-ce' you get the following:
+For example, with \fB\-br \-ce\fR
+you get the following:
 .NS
 if (x > 0) {
   x\-\-;
@@ -616,9 +615,10 @@ This emphasizes the semicolon, making it clear that the body of the
 \fB\-nss\fR disables this
 feature.
 .PP
-The \fB\-pcs\fR option causes a space to be placed between the name of
-the procedure being called and the \fB(\fR (for example, \fBputs ("Hi");\fR.
-The \fB\-npcs\fR option would give \fBputs("Hi");\fR).
+The \fB\-pcs\fR option causes a space to be placed between the name of the
+procedure being called and the \fB(\fR (for example, \fBputs ("Hi");\fR
+The
+\fB\-npcs\fR option would give \fBputs("Hi");\fR).
 .PP
 If the \fB\-cs\fR option is specified, \fBindent\fR puts a space after a cast
 operator.
@@ -628,8 +628,8 @@ The \fB\-bs\fR option ensures that there is a space between the keyword
 In some versions, this is known as the
 \fBBill_Shannon\fR option.
 .SH Declarations
-By default \fBindent\fR will line up identifiers, in the column specified
-by the \fB\-di\fR option
+By default \fBindent\fR will line up identifiers, in the column specified by
+the \fB\-di\fR option
 For example, \fB\-di16\fR makes things look like:
 .NS
 int             foo;
@@ -644,9 +644,9 @@ int foo;
 char *bar;
 .NE
 .PP
-The value given to the \fB\-di\fR option will still affect variables
-which are put on separate lines from their types, for example \fB\-di2\fR
-will lead to
+The value given to the \fB\-di\fR option will still affect variables which
+are put on separate lines from their types, for example \fB\-di2\fR will lead
+to
 .NS
 int
   foo;
@@ -695,20 +695,18 @@ as \fBif\fR or \fBfor\fR is encountered, the indentation level is increased by
 the value specified by the \fB\-i\fR option
 For example, use \fB\-i8\fR to
 specify an eight character indentation for each level
-When a
-statement is broken across two lines, the second line is indented by a
-number of additional spaces specified by the \fB\-ci\fR option
-\fB\-ci\fR
-defaults to 0
-However, if the \fB\-lp\fR option is specified, and a line
-has a left parenthesis which is not closed on that line, then
-continuation lines will be lined up to start at the character position
-just after the left parenthesis
-This processing also applies to \fB[\fR
-and applies to \fB{\fR when it occurs in initialization lists
-For
-example, a piece of continued code might look like this with `\-nlp
-\-ci3' in effect:
+When a statement
+is broken across two lines, the second line is indented by a number of
+additional spaces specified by the \fB\-ci\fR option
+\fB\-ci\fR defaults to 0.
+However, if the \fB\-lp\fR option is specified, and a line has a left
+parenthesis which is not closed on that line, then continuation lines
+will be lined up to start at the character position just after the left
+parenthesis
+This processing also applies to \fB[\fR and applies to \fB{\fR
+when it occurs in initialization lists
+For example, a piece of
+continued code might look like this with \fB\-nlp \-ci3\fR in effect:
 .NS
   p1 = first_procedure (second_procedure (p2, p3),
      third_procedure (p4, p5));
@@ -746,8 +744,8 @@ create_world (x, y, scale)
 }
 .NE
 .PP
-For compatibility with other versions of indent, the option \fB\-nip\fR
-is provided, which is equivalent to \fB\-ip0\fR.
+For compatibility with other versions of indent, the option \fB\-nip\fR is
+provided, which is equivalent to \fB\-ip0\fR.
 .PP
 ANSI C allows white space to be placed on preprocessor command lines
 between the character \fB#\fR and the command name
@@ -763,39 +761,54 @@ option overrides \fB\-lps\fR.
 .PP
 Use the \fB\-eei\fR option to tell \fBindent\fR to improve readability of
 continuation lines from the expression part of \fBif(e)\fR, \fBwhile(e)\fR,
-\fBfor(e;e;e)\fR by indenting an extra tab stop so that they do not
-conflict with the code that follows.
+\fBfor(e;e;e)\fR by indenting an extra tab stop so that they do not conflict
+with the code that follows.
 .SH Disabling Formatting
 Formatting of C code may be disabled for portions of a program by
 embedding special "control comments" in the program
 To turn off
 formatting for a section of a program, place the disabling control
-comment \fB/* *INDENT\-OFF* */\fR on a line by itself just before that
-section
-Program text scanned after this control comment is output
-precisely as input with no modifications until the corresponding
-enabling comment is scanned on a line by itself
-The disabling control
-comment is \fB/* *INDENT\-ON* */\fR, and any text following the comment on
-the line is also output unformatted
-Formatting begins again with the
-input line following the enabling control comment.
+comment
+.NS
+/* *INDENT\-OFF* */
+.NE
+.PP
+on a line by itself just before that section
+Program text scanned
+after this control comment is output precisely as input with no
+modifications until the corresponding enabling comment is scanned on a
+line by itself
+The disabling control comment is
+.NS
+/* *INDENT\-ON* */
+.NE
+.PP
+and any text following the comment on the line is also output
+unformatted
+Formatting begins again with the input line following the
+enabling control comment.
 .PP
 More precisely, \fBindent\fR does not attempt to verify the closing
-delimiter (\fB*/\fR) for these C comments, and any whitespace on the line
-is totally transparent.
+delimiter (\fB*/\fR) for these C comments, and any whitespace on the line is
+totally transparent.
 .PP
 These control comments also function in their C++ formats, namely
-\fB// *INDENT\-OFF*\fR and \fB// *INDENT\-ON*\fR.
+.NS
+// *INDENT\-OFF*
+.NE
+.PP
+and
+.NS
+// *INDENT\-ON*
+.NE
 .PP
 It should be noted that the internal state of \fBindent\fR remains
 unchanged over the course of the unformatted section
 Thus, for
 example, turning off formatting in the middle of a function and
-continuing it after the end of the function may lead to bizarre
-results
-It is therefore wise to be somewhat modular in selecting code
-to be left unformatted.
+continuing it after the end of the function may lead to bizarre results.
+It is therefore wise to be somewhat modular in selecting code to be left
+unformatted.
 .PP
 As a historical note, some earlier versions of \fBindent\fR produced
 error messages beginning with \fB*INDENT**\fR
@@ -804,10 +817,10 @@ were written to ignore any input text lines which began with such error
 messages.
 .PP
 You may also override the formatting of assignment statements by
-using and \fB/* *INDENT\-EQLS* */\fR comment
-This tells \fBindent\fR to use
-the next statement as a hint of how it and subsequent statements (up to
-the next blank line) should be formatted
+using a \fB/* *INDENT\-EQLS* */\fR comment
+This tells \fBindent\fR to use the
+next statement as a hint of how it and subsequent statements (up to the
+next blank line) should be formatted
 It uses the first "binary
 operator" (such as \fB=\fR) on the line as a marker
 The resulting line
@@ -825,15 +838,15 @@ y          += 6;
 .SH Other Languages
 In addition to recognizing C++ comments (which are now standard in C),
 \fBindent\fR provides limited support for C++ constructs:
-.PP
+.TP 3
 * It deals with C++ Class::Method, by not splitting the double
-.NS
 colons.
-.NE
-.PP
+.TP 3
 * It handles C++ const function declarations like
 .NS
-     const MediaDomainList PVR::get_itsMediaDomainList() const
+const MediaDomainList PVR::get_itsMediaDomainList() const
+.NE
+.IP
 by ignoring "const" just after a parameter list */
 .NE
 .PP
@@ -851,7 +864,7 @@ Both lex and yacc use the same file structure:
 \fBrules\fR
 %%
 \fBliteral\fR
-Anything in the "literal" section is copied to the output, and is
+   Anything in the "literal" section is copied to the output, and is
 assumed to be C source
 Also, within the "definitions" and "rules"
 sections, lex/yacc pass any lines bracketed with %{ and %} to the
@@ -860,18 +873,17 @@ output.
 .PP
 Other C statements within "rules" are not currently formatted.
 .SH Miscellaneous options
-To find out what version of \fBindent\fR you have, use the command `indent
-\-\-version'
-This will report the version number of \fBindent\fR, without
+To find out what version of \fBindent\fR you have, use the command 'indent
+\-\-version\fB
+This will report the version number of \fRindent', without
 doing any of the normal processing.
 .PP
 Use the \fB\-\-help\fR option to get a usage summary.
 .PP
 The \fB\-v\fR option can be used to turn on verbose mode
-When in
-verbose mode, \fBindent\fR reports when it splits one line of input into
-two more more lines of output, and gives some size statistics at
-completion.
+When in verbose
+mode, \fBindent\fR reports when it splits one line of input into two more
+more lines of output, and gives some size statistics at completion.
 .PP
 The \fB\-D\fR option can be used to turn on debugging traces
 Its
@@ -1694,5 +1706,6 @@ Output File Specification	Invoking indent.
 Standard Output	Invoking indent.
 Starting indent	Invoking indent.
 Typenames	Declarations.
+Typenames <1>	Declarations.
 Using Standard Input	Invoking indent.
 .TE
